--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite App</title>
+    <title>QR code challenge</title>
   </head>
   <body>
     <section class="card">
