--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     <title>QR code challenge</title>
   </head>
   <body>
-    <section class="card">
-      <img src="image-qr-code.png" />
-      <h1>Improve your frontend skills by building projects</h1>
+    <main>
+      <section class="card">
+        <img alt="QR code image" src="image-qr-code.png" />
+        <h1>Improve your frontend skills by building projects</h1>
 
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level.
-      </p>
-    </section>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
